kustomize/ghost/overlays/sandbox/middleware-ghost.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ghost-forwarded-headers
  labels:
    app: ghost
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
