kustomize/ghost/overlays/sandbox/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  template:
    spec:
      containers:
        - name: ghost
          volumeMounts:
            - name: ghost-config
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
      volumes:
        - name: ghost-config
          configMap:
            name: ghost-config
