kustomize/ghost/overlays/sandbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
  labels:
    app: ghost
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: sandbox-ghost-forwarded-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: blog.revelly.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  number: 2368
